index from folder es roved to upper level to deploy in gitcloud

--- a/html/es/login.html
+++ b/html/es/login.html
@@ -100,7 +100,7 @@
         <div class="w-full mx-auto flex flex-wrap">
           <div class="flex w-full lg:w-1/2">
             <div class="px-3 md:px-0">
-              <a href="./index.html">
+              <a href="../../index.html">
                 <h3 class="font-bold text-blue-900">BLAU</h3>
               </a>
               <p class="py-2">
