--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../../css/style.css">
-    <script src="../../js/script.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js" defer></script>
   </head>
 
   <body
@@ -115,18 +115,14 @@
 
                 </select>
              </div>
-          <!-- Mail icon   -->
-          <!-- <a class="inline-block no-underline hover:text-black" href="#">          
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-          </a> -->
         <!-- User icon   -->
-           <a class="pl-3 inline-block no-underline hover:text-black"  href="./login.html">
+           <!-- <a class="pl-3 inline-block no-underline hover:text-black"  href="./html/es/login.html">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
               <circle cx="12" cy="7" r="4">              
               </circle>
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
     </nav>
@@ -138,7 +134,7 @@
         max-width: 1600px;
         height: 32rem;
         background-image: 
-        url('../../images/2024-10-01_eb3fbe76.jpg'); 
+        url('./images/2024-10-01_eb3fbe76.jpg'); 
       "
     >
       <div class="container mx-auto">
@@ -359,7 +355,7 @@
             max-width: 1600px;
             height: 12rem;
             background-image: 
-            url('../../images/clients/01-K.jpg'); 
+            url('./images/clients/01-K.jpg'); 
             background-position: right;
           "
             >
@@ -408,7 +404,7 @@
             max-width: 1600px;
             height: 12rem;
             background-image: 
-            url('../../images/clients/02-A-Y.jpg'); 
+            url('./images/clients/02-A-Y.jpg'); 
           "
             >
               <!-- picture  -->
@@ -451,7 +447,7 @@
             max-width: 1600px;
             height: 12rem;
             background-image: 
-            url('../../images/clients/03-TCC.jpg'); 
+            url('./images/clients/03-TCC.jpg'); 
           "
             >
               <!-- picture  -->
@@ -545,7 +541,7 @@
         max-width: 1600px;
         height: 48rem;
         background-image: 
-        url('../../images/02-cut-istockphoto-909979066.jpg'); 
+        url('./images/02-cut-istockphoto-909979066.jpg'); 
       "
     >
       <div id="contact-us" class="container py-2 px-6 mx-auto">              
@@ -585,7 +581,7 @@
 
 
                         <div class="col-span-2">
-                          <label class="text-gray-700" for="animals">
+                          <label class="text-gray-700" for="rooms">
                               Type
                               <select id="rooms" class="block px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm w-52 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="rooms">
                                   <option value="">
