meta content descriprtion changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BLAU</title>
     <meta
       name="description"
-      content="Free open source Tailwind CSS Store template"
+      content="Alquila tu casa mientras no la usas"
     />
     <meta
       name="keywords"
