email send functionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
     <script type="text/javascript">
        (function() {
           emailjs.init('8stP3FjEmxxzgs41n');
@@ -78,13 +80,13 @@
                   >Pricing</a
                 >
               </li>
-              <li>
+              <!-- <li>
                 <a
                   class="inline-block no-underline hover:text-black hover:underline py-2 px-4"
-                  href="https://tailwindcss.com/docs/list-style-position"
+                  href="https://tailwindcss.com/"
                   >HOSTS</a
                 >
-              </li>
+              </li> -->
               <li>
                 <a
                   class="inline-block no-underline hover:text-black hover:underline py-2 px-4"
@@ -108,7 +110,7 @@
         <div class="order-2 md:order-3 flex items-center" id="nav-content">
         <!-- Language selector   -->
           <div class="col-span-1 md:mr-6">
-                <select id="languages" class="block px-3 py-2 bg-blue-100 border border-gray-100 rounded-md shadow-md w-18 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="language">
+                <!-- <select id="languages" class="block px-3 py-2 bg-blue-100 border border-gray-100 rounded-md shadow-md w-18 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="language">
                   <option value="esp">
                     ESP
                   </option>
@@ -119,7 +121,7 @@
                     ENG
                   </option>
 
-                </select>
+                </select> -->
              </div>
         <!-- User icon   -->
            <!-- <a class="pl-3 inline-block no-underline hover:text-black"  href="./html/es/login.html">
