--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BLAU</title>
     <link rel="icon" href="./images/logo/favicon.ico" type="image/x-icon" />
+    <link rel="icon" sizes="16x16" href="./images/logo/favicon-16x16.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="./images/logo/favicon-32x32.png" type="image/png">
     <meta
       name="description"
       content="Alquila tu casa mientras no la usas"
