16x16 32x32 logos are added

--- a/index.html
+++ b/index.html
@@ -557,37 +557,79 @@
       </div>
      </section>
 
-    
     <!-- about 2 section -->
-    <section id="about" class="bg-white py-8">
-      <div class="container py-8 px-6 mx-auto">
-        <h3
-          class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-8"
-          href="#"
-        >
-        Quienes somos
-        </h3>
+     <section id="about" class="relative bg-white py-8">
+      <div class="items-center flex flex-wrap py-8 px-6 ">
+        <div class="w-11/12 md:w-3/12 ml-auto mr-auto px-2 mb-4">
+          <img alt="..." class="max-w-full rounded-lg shadow-lg" src="./images/J_portrait.jpg">
+        </div>
+        <div class="w-full md:w-8/12 ml-auto mr-auto">
+          <div class="md:pr-12">
+            <!-- blue sircle in case we need it-->
+            <!-- <div class="text-blue-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-blue-300 mt-8">
+              <i class="fas fa-rocket text-xl">BLAU</i>
+            </div> -->
+            <h3
+            class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-8"
+            href="#"
+            >
+            Quienes somos
+            </h3>
 
-
-        <p class="mb-4">       
-          ¡Hola!  Mi nombre es Jacint. Nací en Barcelona a finales de los 80' pero he vivido en muchos lugares hasta instalarme en la Costa Brava a caballo del Alt i el Baix Empordà, un sitio fantástico. Me apasionan las casas antiguas, el mercado inmobiliario y los espacios cuidados. Tras varios años gestionando mi apartamento en Tavertet, un pueblo precioso, empecé a gestionar propiedades en el programa Co-anfitrión Experto de Airbnb. En la actualidad gestiono más de 10 propiedades y cuento con un equipo de colaboradores de confianza. También contamos con personal de limpieza en distintos puntos de Catalunya y varias empresas de lavandería asociadas. 
-        </p>
-        <p class="mb-4">
-          Estoy siempre abierto a nuevas opotunidades y proyectos interesantes en cualquier ámbito.
-        </p>
-        <p class="mb-8">
-          Me gusta hablar con las personas, conocer su historia y la de sus casas. Será un placer saber más de la suya!
-        </p>
+            <p class="mb-4">       
+              ¡Hola!  Mi nombre es Jacint. Nací en Barcelona a finales de los 80' pero he vivido en muchos lugares hasta instalarme en la Costa Brava a caballo del Alt i el Baix Empordà, un sitio fantástico. Me apasionan las casas antiguas, el mercado inmobiliario y los espacios cuidados. Tras varios años gestionando mi apartamento en Tavertet, un pueblo precioso, empecé a gestionar propiedades en el programa Co-anfitrión Experto de Airbnb. En la actualidad gestiono más de 10 propiedades y cuento con un equipo de colaboradores de confianza. También contamos con personal de limpieza en distintos puntos de Catalunya y varias empresas de lavandería asociadas. 
+            </p>
+            <p class="mb-4">
+              Estoy siempre abierto a nuevas opotunidades y proyectos interesantes en cualquier ámbito.
+            </p>
+            <p class="mb-8">
+              Me gusta hablar con las personas, conocer su historia y la de sus casas. Será un placer saber más de la suya!
+            </p>
+            <!-- <ul class="list-none mt-6">
+              <li class="py-2">
+                <div class="flex items-center">
+                  <div>
+                    <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i class="fas fa-fingerprint"></i></span>
+                  </div>
+                  <div>
+                    <h4 class="text-blueGray-500">
+                      Carefully crafted components
+                    </h4>
+                  </div>
+                </div>
+              </li>
+              <li class="py-2">
+                <div class="flex items-center">
+                  <div>
+                    <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i class="fab fa-html5"></i></span>
+                  </div>
+                  <div>
+                    <h4 class="text-blueGray-500">Amazing page examples</h4>
+                  </div>
+                </div>
+              </li>
+              <li class="py-2">
+                <div class="flex items-center">
+                  <div>
+                    <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i class="far fa-paper-plane"></i></span>
+                  </div>
+                  <div>
+                    <h4 class="text-blueGray-500">Dynamic components</h4>
+                  </div>
+                </div>
+              </li>
+            </ul> -->
+          </div>
+        </div>
       </div>
-    </section>
-    
+      </section>
 
     <!-- Contacnt us section -->
     <section 
       class="w-full mx-auto bg-nordic-gray-light flex pt-2 md:pt-0 md:items-center bg-cover bg-right"
       style="
         max-width: 1600px;
-        height: 48rem;
+        height: 50rem;
         background-image: 
         url('./images/02-cut-istockphoto-909979066.jpg'); 
       "
