--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <input class="hidden" type="checkbox" id="menu-toggle" />
 
         <div
-          class="hidden md:flex md:items-center md:w-auto w-full order-3 md:order-1"
+          class="hidden md:flex md:items-center md:w-5/12 w-full order-3 md:order-1"
           id="menu"
         >
           <nav>
@@ -101,19 +101,19 @@
           </nav>
         </div>
 
-        <div class="order-1 md:order-2">
+        <div class="order-1 md:order-2 md:w-2/12">
           <a
-            class="flex items-center tracking-wide no-underline hover:no-underline font-bold text-blue-900 text-xl"
+            class="flex items-center justify-center tracking-wide no-underline hover:no-underline font-bold text-blue-900 text-xl"
             href="#"
           >
              BLAU
           </a>
         </div>
 
-        <div class="order-2 md:order-3 flex items-center" id="nav-content">
+        <div class="order-2 md:order-3 md:w-5/12 flex items-center justify-end" id="nav-content">
         <!-- Language selector   -->
-          <div class="col-span-1 md:mr-6">
-                <!-- <select id="languages" class="block px-3 py-2 bg-blue-100 border border-gray-100 rounded-md shadow-md w-18 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="language">
+          <!-- <div class="col-span-1 md:mr-6">
+                <select id="languages" class="block px-3 py-2 bg-blue-100 border border-gray-100 rounded-md shadow-md w-18 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="language">
                   <option value="esp">
                     ESP
                   </option>
@@ -124,8 +124,8 @@
                     ENG
                   </option>
 
-                </select> -->
-             </div>
+                </select>
+          </div> -->
         <!-- User icon   -->
            <!-- <a class="pl-3 inline-block no-underline hover:text-black"  href="./html/es/login.html">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -150,7 +150,7 @@
     >
       <div class="container mx-auto">
         <div
-          class="flex flex-col w-full lg:w-1/2 justify-start items-start px-6 tracking-wide"
+          class="flex flex-col w-full lg:w-1/2 justify-center items-start px-6 tracking-wide"
         >
           <div class="px-3 mb-8 rounded shadow-xl bg-blue-300 bg-opacity-25">
             <h1 class="text-gray-100 text-2xl md:text-4xl my-4 font-bold">Alquila tu casa mientras no la usas</h1>
