--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
     >
       <div class="container mx-auto">
         <div
-          class="flex flex-col w-full lg:w-1/2 justify-center items-start px-6 tracking-wide"
+          class="flex flex-col w-full lg:w-8/12 justify-center items-start px-6 tracking-wide"
         >
           <div class="px-3 mb-8 rounded shadow-xl bg-blue-300 bg-opacity-25">
-            <h1 class="text-gray-100 text-2xl md:text-4xl my-4 font-bold">Alquila tu casa mientras no la usas</h1>
+            <h1 class="text-gray-100 text-2xl md:text-4xl my-4 font-bold">Alquila tu casa mientras no la usas<h1>
           </div>
           <div class="col-span-2 text-right">
             <button type="submit" 
