contact us section ui fix

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
 
     <!-- top photo section -->
     <section
-      class="w-full mx-auto bg-nordic-gray-light flex pt-24 md:pt-0 md:items-center bg-cover bg-right"
+      class="w-full mx-auto bg-nordic-gray-light flex pt-24 md:pt-0 md:items-center bg-cover bg-left"
       style="
         max-width: 1600px;
-        height: 32rem;
+        height: 24rem;
         background-image: 
-        url('./images/2024-10-01_eb3fbe76.jpg'); 
+        url('./images/05-cut-66.jpg'); 
       "
     >
       <div class="container mx-auto">
@@ -462,9 +462,15 @@
 
     <!-- about 2 section -->
      <section id="about" class="relative bg-white py-8">
-      <div class="items-center flex flex-wrap py-8 px-6 ">
-        <div class="w-11/12 md:w-3/12 ml-auto mr-auto px-2 mb-4">
-          <img alt="..." class="max-w-full rounded-lg shadow-lg" src="./images/J_portrait.jpg">
+      <!-- <h3
+      class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-2  px-12 w-8/12"
+      href="#"
+      >
+      Quienes somos
+      </h3> -->
+      <div class="items-center flex flex-wrap py-8 px-4 ">
+        <div class="w-11/12 md:w-3/12 ml-auto mr-auto md:pr-2 mb-4">
+          <img alt="Jacint" class="max-w-full rounded-lg shadow-lg" src="./images/J_portrait.jpg">
         </div>
         <div class="w-full md:w-8/12 ml-auto mr-auto">
           <div class="md:pr-12">
@@ -549,23 +555,23 @@
                           Contact us
                       </p>
                       <div class="grid max-w-xl grid-cols-2 gap-4 m-auto">
-                        <div class="col-span-2 lg:col-span-1">
+                        <div class="col-span-2">
                           <div class=" relative ">
                             <input type="text" id="contact-form-name" class=" rounded-lg border-transparent flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent" placeholder="Name"/>
                           </div>
                         </div>
-                        <div class="col-span-2 lg:col-span-1">
+                        <div class="col-span-2">
                           <div class=" relative ">
                             <input type="text" id="contact-form-email" class=" rounded-lg border-transparent flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent" placeholder="email"/>
                           </div>
                         </div>
 
-                        <div class="col-span-2 lg:col-span-1">
+                        <div class="col-span-2">
                           <div class=" relative ">
                             <input type="text" id="contact-form-phone" class=" rounded-lg border-transparent flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent" placeholder="phone" required/>
                           </div>
                         </div>
-                        <div class="col-span-2 lg:col-span-1">
+                        <div class="col-span-2">
                           <div class=" relative ">
                             <input type="text" id="contact-form-location" class=" rounded-lg border-transparent flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent" placeholder="location"/>
                           </div>
@@ -576,7 +582,7 @@
                         <div class="col-span-2">
                           <label class="text-gray-700" for="rooms">
                               Type
-                              <select id="rooms" class="block px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm w-52 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="rooms">
+                              <select id="rooms" class="block px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm w-full focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="rooms">
                                   <option value="">
                                       Select an option
                                   </option>
@@ -643,7 +649,7 @@
             <div class="px-3 md:px-0">
               <h3 class="font-bold text-blue-900">BLAU</h3>
               <p class="py-2">
-                Arrienda tu segunda vivienda mientras no la usas.
+                Alquila tu casa mientras no la usas
               </p>
             </div>
           </div>
