--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </div>
           <div class="col-span-2 text-right">
             <button type="submit" 
-            class="py-2 px-4  bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg"
+            class="py-2 px-4 bg-gradient-to-br from-indigo-700 to-blue-500  hover:from-indigo-900 hover:to-blue-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg"
             onclick="window.location.href='#contact-us';"
             >
              Estudio de rentabilidad gratuito  
@@ -243,7 +243,7 @@
         </ul>
         <div class="col-span-2 text-center">
           <button type="submit" 
-          class="py-2 px-4 w-64 bg-gradient-to-br from-indigo-700 to-blue-500  hover:from-indigo-900 hover:to-blue-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg"
+          class="py-2 px-4 w-64 bg-gradient-to-br from-indigo-700 to-blue-500  hover:from-indigo-900 hover:to-blue-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 rounded-lg"
           onclick="window.location.href='#contact-us';"
           >
           Contactanos  
@@ -628,7 +628,7 @@
                         </div>
                       </div>
                       <div class="col-span-2 text-right">
-                        <button type="submit" class="py-2 px-4  bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg ">
+                        <button type="submit" class="py-2 px-4  bg-gradient-to-br from-indigo-700 to-blue-500  hover:from-indigo-900 hover:to-blue-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg ">
                               Send
                         </button>
                       </div>
