payement cards added

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </section>
 
     <!-- about 1 section -->
-    <section id="mission" class="bg-white py-8"></section>
+    <section id="mission" class="bg-white pt-2 pb-8"></section>
       <div class="container py-8 px-6 mx-auto">
         <h3
           class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-8"
@@ -452,16 +452,8 @@
       </div>
     </section>
 
-    <br>
-    <!-- price section -->
-     <section>
-      <div id="price" class="carousel relative container mx-auto" style="max-width: 1600px">
-
-      </div>
-     </section>
-
     <!-- about 2 section -->
-     <section id="about" class="relative bg-white py-8">
+    <section id="about" class="relative bg-white py-8">
       <!-- <h3
       class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-2  px-12 w-8/12"
       href="#"
@@ -531,11 +523,81 @@
           </div>
         </div>
       </div>
-      </section>
+    </section>
+
+    <!-- price section -->
+    <section>
+      <!-- <br> -->
+      <div  id="price" class="bg-gradient-to-br from-blue-400 to-green-100 border-t border-gray-400 flex flex-col justify-center items-center md:flex-row gap-2">
+   
+        <!-- Payment Card 1 -->
+        <div class="bg-white border border-gray-200 rounded-lg shadow-lg p-6 m-6 max-w-sm">
+          <h2 class="text-center text-gray-600 text-lg font-semibold mb-2">Pago único</h2>
+          <p class="text-center text-4xl font-bold text-gray-800 mb-4">895€</p>
+          <ul class="text-gray-700 space-y-2 mb-6">
+            <li>✔️ 10 módulos en sesiones en directo</li>
+            <li>✔️ 1 sesión de seguimiento, para casos prácticos y preguntas, un mes más tarde de haber acabado la formación.</li>
+            <li>✔️ Grabación de las sesiones (disponibles durante un año)</li>
+            <li>✔️ Ejercicios y prácticas</li>
+            <li>✔️ PDF descargables</li>
+            <li>✔️ Audios con meditaciones</li>
+          </ul>
+          <button type="submit" 
+          class="py-2 px-4 bg-gradient-to-br from-indigo-700 to-blue-500  hover:from-indigo-900 hover:to-blue-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg"
+          onclick="window.location.href='#contact-us';"
+          >
+            Reservo mi plaza
+          </button>
+        </div>
+        
+        <!-- Payment Card 2 -->
+        <div class="bg-white border border-gray-200 rounded-lg shadow-lg p-6 m-6 max-w-sm">
+          <h2 class="text-center text-gray-600 text-lg font-semibold mb-2">2 pagos</h2>
+          <p class="text-center text-4xl font-bold text-gray-800 mb-4">447,5€</p>
+          <ul class="text-gray-700 space-y-2 mb-6">
+            <li>✔️ 10 módulos en sesiones en directo</li>
+            <li>✔️ 1 sesión de seguimiento, para casos prácticos y preguntas, un mes más tarde de haber acabado la formación.</li>
+            <li>✔️ Grabación de las sesiones (disponibles durante un año)</li>
+            <li>✔️ Ejercicios y prácticas</li>
+            <li>✔️ PDF descargables</li>
+            <li>✔️ Audios con meditaciones</li>
+          </ul>
+          <button type="submit" 
+          class="py-2 px-4 bg-gradient-to-br from-indigo-700 to-blue-500  hover:from-indigo-900 hover:to-blue-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg"
+          onclick="window.location.href='#contact-us';"
+          >
+            ¡Me apunto!
+          </button>
+        </div>
+
+        <!-- Payment Card 3 -->
+        <div class="bg-white border border-gray-200 rounded-lg shadow-lg p-6 m-6 max-w-sm">
+          <h2 class="text-center text-gray-600 text-lg font-semibold mb-2">2 pagos</h2>
+          <p class="text-center text-4xl font-bold text-gray-800 mb-4">523,5€</p>
+          <ul class="text-gray-700 space-y-2 mb-6">
+            <li>✔️ 10 módulos en sesiones en directo</li>
+            <li>✔️ 1 sesión de seguimiento, para casos prácticos y preguntas, un mes más tarde de haber acabado la formación.</li>
+            <li>✔️ Grabación de las sesiones (disponibles durante un año)</li>
+            <li>✔️ Ejercicios y prácticas</li>
+            <li>✔️ PDF descargables</li>
+            <li>✔️ Audios con meditaciones</li>
+          </ul>
+          <button type="submit" 
+          class="py-2 px-4 bg-gradient-to-br from-indigo-700 to-blue-500  hover:from-indigo-900 hover:to-blue-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-lg"
+          onclick="window.location.href='#contact-us';"
+          >
+            ¡Me apunto!
+          </button>
+        </div>
+
+      </div>
+      </div>
+    </section> 
+    
 
     <!-- Contacnt us section -->
     <section 
-      class="w-full mx-auto bg-nordic-gray-light flex pt-2 md:pt-0 md:items-center bg-cover bg-right"
+      class="w-full mx-auto bg-nordic-gray-light border-t border-gray-400 flex pt-2 md:pt-0 md:items-center bg-cover bg-right"
       style="
         max-width: 1600px;
         height: 50rem;
