--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal"
   >
     <!--Nav-->
-    <nav id="header" class="w-full z-30 top-0 py-1 bg-blue-100"">
+    <nav id="header" class="bg-gradient-to-br from-blue-400 to-indigo-100 border-b border-gray-300 w-full z-30 top-0 py-1"">
       <div
         class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-6 py-3"
       >
