--- a/html/es/login.html
+++ b/html/es/login.html
@@ -3,135 +3,101 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>BLAU</title>
-    <meta
-      name="description"
-      content="Free open source Tailwind CSS Store template"
-    />
-    <meta
-      name="keywords"
-      content="tailwind,tailwindcss,tailwind css,css,starter template,free template,store template, shop layout, minimal, monochrome, minimalistic, theme, nordic"
-    />
-
+    <title>The Room of Beautiful Phonaid</title>
     <link
-      rel="stylesheet"
-      href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap"
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="../../css/style.css" />
-    <script src="../../js/script.js" defer></script>
   </head>
-
-  <body
-    class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal"
-  >
-    <!--Nav-->
-    <!-- <section class="bg-white py-4"> -->
-    <section
-      class="w-full mx-auto bg-nordic-gray-light flex pt-2 md:pt-0 md:items-center bg-cover bg-center"
-      style="
-        max-width: 1600px;
-        height: 55rem;
-        background-image: url('../../images/02-cut-istockphoto-909979066.jpg');
-      "
-    >
-      <div class="container py-2 px-6 mx-auto">
-        <div
-          class="container flex items-center justify-center flex-1 h-full mx-auto"
+  <body class="bg-gray-900 text-gray-200">
+    <!-- Container -->
+    <div class="max-w-3xl mx-auto p-4 space-y-8">
+      <!-- Title Section -->
+      <div class="text-center">
+        <h1 class="text-2xl font-bold text-gray-100">
+          The Room of Beautiful Phonaid
+        </h1>
+        <a href="#" class="text-blue-400 underline hover:text-blue-500"
+          >"The Room of Beautiful Phonaid" on YouTube</a
         >
-          <div class="w-full h-screen font-sans bg-cover bg-landscape">
-            <div
-              class="container flex items-center justify-center flex-1 h-full mx-auto"
-            >
-              <div class="w-full max-w-lg">
-                <div class="leading-loose">
-                  <form
-                    class="max-w-lg p-10 m-auto rounded shadow-xl bg-gray-300 bg-opacity-75"
-                  >
-                    <p
-                      class="mb-8 text-2xl font-light text-center text-gray-700"
-                    >
-                      Login
-                    </p>
-                    <div class="mb-2">
-                      <div class="relative">
-                        <input
-                          type="text"
-                          id="login-with-bg-email"
-                          class="rounded-lg border-transparent flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent"
-                          placeholder="email"
-                        />
-                      </div>
-                    </div>
-                    <div class="mb-2">
-                      <div class="relative">
-                        <input
-                          type="text"
-                          id="login-with-bg-password"
-                          class="rounded-lg border-transparent flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent"
-                          placeholder="password"
-                        />
-                      </div>
-                    </div>
-                    <div class="flex items-center justify-between mt-4">
-                      <button
-                        type="submit"
-                        class="py-2 px-4 bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500 focus:ring-offset-indigo-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 rounded-lg"
-                      >
-                        Validate
-                      </button>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-    </section>
-    <footer class="container mx-auto bg-white py-2 border-t border-gray-400">
-      <div class="container flex px-3 pt-2">
-        <div class="w-full mx-auto flex flex-wrap">
-          <div class="flex w-full lg:w-1/2">
-            <div class="px-3 md:px-0">
-              <a href="../../index.html">
-                <h3 class="font-bold text-blue-900">BLAU</h3>
-              </a>
-              <p class="py-2">
-                Arrienda tu segunda vivienda mientras no la usas.
-              </p>
-            </div>
-          </div>
-          <div
-            class="flex w-full lg:w-1/2 lg:justify-end lg:text-right mt-4 md:mt-0"
+
+      <!-- Description Section -->
+      <div class="text-center text-gray-400">
+        <p>
+          <strong
+            >Play the game with the beautiful Phonaid, the daughter of Phonos
+            the god of sound.</strong
           >
-            <div class="px-3 md:px-0">
-              <div class="w-full flex items-center py-2 mt-0">
-                <a href="#" class="mx-2">
-                  <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-                    <path
-                      d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
-                    ></path>
-                  </svg>
-                </a>
-                <a href="#" class="mx-2">
-                  <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-                    <path
-                      d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"
-                    ></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
+        </p>
+        <p class="italic">
+          The audio-visual installation "The Room of Beautiful Phonaid"
+          performed on June 18, 2018, as part of the international public-art
+          project "FROM REACHED PUBLIC: HOSPITALITY SESSION".
+        </p>
+      </div>
+
+      <!-- Image Section -->
+      <div class="flex justify-center">
+        <img
+          src="image.png"
+          alt="The Room of Beautiful Phonaid Installation"
+          class="rounded-lg shadow-md w-full max-w-sm border border-gray-700"
+        />
+      </div>
+
+      <!-- Mechanics and Installation Section -->
+      <div class="space-y-4">
+        <h2 class="text-lg font-semibold text-gray-100">
+          Mechanics and Installation Algorithm:
+        </h2>
+        <p class="text-gray-400">
+          Doors to the Room of Phonaid are closed. On the doors there is a text:
+        </p>
+
+        <!-- Rules Box -->
+        <div
+          class="bg-gray-800 p-4 rounded-lg shadow-inner text-center text-gray-300 border border-gray-700"
+        >
+          <h3 class="font-bold text-gray-100">
+            The Room of Beautiful Phonaid.
+          </h3>
+          <p class="font-semibold text-gray-200">The Rules of the Game:</p>
+          <ol
+            class="list-decimal list-inside space-y-1 text-left text-gray-300"
+          >
+            <li>Follow the numbers.</li>
+            <li>Remember about the clock.</li>
+            <li>Try to avoid The Deuce.</li>
+          </ol>
+        </div>
+
+        <!-- Main Text Content -->
+        <div class="text-gray-400 space-y-4">
+          <p>
+            The space inside the room is divided into five sectors by lines
+            drawn on the floor. In each sector the numbers from 1 to 6 are
+            written in the form of dots (as on a dice). 2 is missing. Inside of
+            the entrance door there is another sector about 100 x 70 cm size.
+            There is a "START" mark on the border of this sector. Musicians are
+            located around the perimeter of the room. In the center there is a
+            black cube, half of which serves as a DJ’s workplace, in the second
+            half located the props of Phonaid: hourglass tray with a dice, and
+            accessories that the actress wears. The mouths of participants in
+            the installation (except musicians) are closed with bandages. The
+            clock on the wall is stopped. The door to the room is locked.
+          </p>
+
+          <p>
+            The mistress of the room, Phonaid, goes out to the hall, take a hand
+            of Protagonist and lead the Protagonist into the room. Stops it to
+            the "START" line. Locks the door on her way. Goes to the cube in the
+            center of the room. She takes the hourglass in her hand. She invites
+            the Protagonist into the game with a gesture. As soon as he crosses
+            the line, Phonaid turns the hourglass (3 minutes).
+          </p>
         </div>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
