--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
    
 
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-4">
           <!-- Payment Card 1 -->
           <div class="bg-white border border-gray-200 rounded-lg shadow-lg p-6 m-2 max-w-sm w-full h-full flex flex-col justify-between">
             <h2 class="text-center text-gray-600 text-lg font-semibold mb-2">Gestión Básica</h2>
