3 mock reviews added

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       </div>
     </section>
 
-    <!-- cards scroll block -->
+    <!-- review cards scroll block -->
     <section id="hosts">
       <!-- cards scroll block -->
       <div class="relative bg-blue-100 p-1" style="background-image: 
@@ -283,7 +283,9 @@
                   Kristen
                 </h1>
                 <p class="mt-2 text-sm text-gray-600" style="white-space: normal;">               
-                    I wrote or dictated at various stages a chronicle of my own life in Catalan, "Llibre dels fets", the first autobiography by a Christian king.
+                  La gestión es excelente, los huéspedes felices y yo sin preocupaciones. 
+                  <br/>
+                  ¡Un servicio de 10!
                 </p>
                 <div class="flex mt-2 item-center">
                     <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
@@ -326,7 +328,7 @@
                   Arturo y Yaiza
                 </h1>
                 <p class="mt-2 text-sm text-gray-600" style="white-space: normal;">
-                  While still a young man and Seneschal to the King of Majorca, was very given to composing worthless songs and poems and to doing other things.
+                  Gracias al equipo, ahora mi piso siempre está impecable y los huéspedes quedan encantados. ¡Las reservas no paran de llegar!
                 </p>
                 <div class="flex mt-2 item-center">
                     <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
@@ -369,7 +371,9 @@
                   TopCapCana
                 </h1>
                 <p class="mt-2 text-sm text-gray-600" style="white-space: normal;">               
-                    I wrote or dictated at various stages a chronicle of my own life in Catalan, "Llibre dels fets", the first autobiography by a Christian king.
+                  La rentabilidad ha mejorado muchísimo y la atención a los detalles es espectacular. 
+                  <br/>
+                  ¡Recomendadísimos!
                 </p>
                 <div class="flex mt-2 item-center">
                     <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
@@ -527,11 +531,7 @@
 
     <!-- price section -->
     <section>
-      <!-- <br> -->
       <div  id="price" class="bg-gradient-to-br from-blue-400 to-green-100 border-t border-gray-300 flex flex-col justify-center items-center md:flex-row gap-2 p-6">
-   
-
-
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-4">
           <!-- Payment Card 1 -->
           <div class="bg-white border border-gray-200 rounded-lg shadow-lg p-6 m-2 max-w-sm w-full h-full flex flex-col justify-between">
